Release v0.7.0 (#72)
* Branch for v0.7.0

* JavaDoc fixes (#58)

* Fix #57: Use greedy integrators where possible (#59)

+ Greedy integrators can be used anywhere the integrator does not itself initiate a short circuit (returns false). Passing along the downstream rejecting flag is allowed for greedy integrators.

* Implement JSpecify nullability annotations (#60)

+ Implement JSpecify nullability annotations
+ Add ErrorProne and NullAway to build for compile-time checks
+ Add more tests to `MinMaxGatherer` as highlighted by coverage report

* Make nullable lists more sane, update JEP reference (#61)

* Implement ordering by frequency (#62)

* Implement movingSum, movingSumBy, movingProduct, and movingProductBy (#63)

* Misc Cleanups (#66)

+ Nullability annotations in Gatherers4j.java
+ Minimum windowSize is 1 in a lot of places, not zero.
+ Add constructor to GroupingByGatherer and handle null mapping function to make nullability checks happier
+ Parameterize tests where multiple independent assertions were taking place

* #64 - Change order of arguments so functions are last (#67)

+ More Kotlin friendly, if people end up using this from Kotlin instead of extension functions on Stream
+ More consistent, easier for me to remember the order

* Remove min/max (#68)

* Broader support for stream sizes (#69)

+ Rename `exactSize(n)` to `sizeExactly(n)`
+ Add `sizeGreaterThan(n)`
+ Add `sizeGreaterThanOrEqualTo(n)`
+ Add `sizeLessThan(n)`
+ Add `sizeLessThanOrEqualTo(n)`

* Misc fixes (#70)

* Use default implementation of checkFinalLength when tryAccept will fail-fast.

* Eliminate warning

* Release v0.7.0